--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta name="robots" content="index,follow">
 	<meta name="author" content="Joshua Pekera">	
 	<!-- Set a base location for assets -->
-	<base href="http://cv.joshuapekera.com"/>
+	<base href="http://joshuapekera.com/"/>
 	<!-- End base -->
 	<!-- TypeKit Async -->
 	<script type="text/javascript">
@@ -36,10 +36,10 @@
 	</script>
 	
 	<!-- Le styles -->
-	<link href="assets/css/animate.css" rel="stylesheet">
-	<link href="assets/css/main.css" rel="stylesheet">
-	<link href="assets/css/fluid.css" rel="stylesheet">
-	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="/assets/css/animate.css" rel="stylesheet">
+	<link href="/assets/css/main.css" rel="stylesheet">
+	<link href="/assets/css/fluid.css" rel="stylesheet">
+	<link href="/assets/css/style.css" rel="stylesheet">
 	
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -47,13 +47,13 @@
 	<![endif]-->
 	
 	<!-- Le fav and touch icons -->
-	<link rel="shortcut icon" href="assets/ico/fav.ico">
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/touch-144-1.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/touch-72-1.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/touch-58-1.png">
+	<link rel="shortcut icon" href="/assets/ico/fav.ico">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/touch-144-1.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/touch-72-1.png">
+	<link rel="apple-touch-icon-precomposed" href="/assets/ico/touch-58-1.png">
 	
-	<script type="text/javascript" src="assets/js/lib/scripts/matchmedia.js"></script>
-	<script type="text/javascript" src="assets/js/lib/scripts/picturefill.js"></script>
+	<script type="text/javascript" src="/assets/js/lib/scripts/matchmedia.js"></script>
+	<script type="text/javascript" src="/assets/js/lib/scripts/picturefill.js"></script>
 	<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-30476296-3']);
@@ -391,6 +391,6 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script type="text/javascript" src="assets/js/scripts.js"></script>
+<script type="text/javascript" src="/assets/js/scripts.js"></script>
 </body>
 </html>
