--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta name="robots" content="index,follow">
 	<meta name="author" content="Joshua Pekera">	
 	<!-- Set a base location for assets -->
-	<base href="http://joshuapekera.com/"/>
+	<!-- <base href="http://cv.joshuapekera.com/"/> -->
 	<!-- End base -->
 	<!-- TypeKit Async -->
 	<script type="text/javascript">
