--- a/index.html
+++ b/index.html
@@ -111,15 +111,17 @@
 					</nav>
 				</div>
 			</header>
-			<div class="container animated fadeIn" id="cover">
-				<div class="hero-unit">
-					<img src="/assets/img/joshuapekera.jpg" alt="Joshua Pekera Cover"/>
+			<section id="content">
+				<div class="container">
+					<div class="hero-unit animated bounceInLeft" id="cover">
+						<img src="/assets/img/joshuapekera.png" alt="Joshua Pekera Cover"/>
+					</div>
+					<div class="hero-links">
+						<a href="/resume" class="">
+						<a href="/portfolio" class="">
+					</div>
 				</div>
-				<div class="hero-links">
-					<a href="/resume" class="">
-					<a href="/portfolio" class="">
-				</div>
-			</div>
+			</section>
 			
 			<section id="buckets">
 				<div class="container">
