--- a/index.html
+++ b/index.html
@@ -113,15 +113,48 @@
 			</header>
 			<section id="content">
 				<div class="container">
-					<div class="hero-unit animated bounceInLeft" id="cover">
-						<img src="/assets/img/joshuapekera.png" alt="Joshua Pekera Cover"/>
-					</div>
-					<div class="hero-links">
-						<a href="/resume" class="">
-						<a href="/portfolio" class="">
+					<div class="row-fluid">
+						<div class="span7">
+							<div class="hero-unit">
+								<img class="animated bounceInLeft"  id="cover" src="/assets/img/joshuapekera.png" alt="Joshua Pekera Cover"/>
+							</div>
+						</div>
+						<div class="span5 hidden-phone">
+							<div class="greeting animated bounceInRight" id="bonjour">
+								<h2>Bonjour!</h2>
+								<p>I am a marketer, strategist and designer with fleeting moments of profound creativity. A crafter of pixels and copy.  cult member since 2001.</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
+			
+			<div class="paper-banner animated fadeIn" id="contactbannertwo">
+					<div class="row-fluid">
+						<div class="span12">
+							<div class="greeting visible-phone">
+								<h2>Bonjour!</h2>
+								<p>I am a marketer, strategist and designer with fleeting moments of profound creativity. A crafter of pixels and copy.  cult member since 2001.</p>
+							</div>
+							<p class="contactlead hidden-phone">Call, Email, Skype, Connect or Follow. All forms of digital stalking accepted. </p>
+						</div>
+					</div>
+					<div class="row-fluid hidden-phone">
+						<div class="span12">
+							<div class="contacticons">
+								<ul>
+									<li><a href="http://twitter.com/joshuapekera" class="fm-btn" id="fm-twitter" target="blank">Twitter</a></li>
+									<li><a href="http://fb.me/joshuapekera" class="fm-btn" id="fm-facebook" target="blank">Facebook</a></li>
+									<li><a href="http://www.linkedin.com/in/joshuaspekera" class="fm-btn" id="fm-linkedin" target="blank">LinkedIn</a></li>
+									<li><a href="http://dribbble.com/joshuapekera" class="fm-btn" id="fm-dribbble" target="blank">Dribbble</a></li>
+									<li><a href="http://forrst.me/joshuapekera" class="fm-btn" id="fm-forrst" target="blank">Forrst</a></li>
+									<li><a href="skype:joshuapekera?chat" class="fm-btn" id="fm-skype">Skype</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				
+				</div><!-- end paper -->
 			
 			<section id="buckets">
 				<div class="container">
