--- a/index.html
+++ b/index.html
@@ -115,26 +115,35 @@
 				<div class="container">
 					<div class="row-fluid">
 						<div class="span7">
-							<div class="hero-unit">
-								<img class="animated bounceInLeft"  id="cover" src="/assets/img/joshuapekera.png" alt="Joshua Pekera Cover"/>
+							<div class="hero-unit animated bounceInLeft" id="cover">
+								<div data-picture data-alt="Joshua Pekera Cover">
+									<div data-src="/assets/img/joshuapekera-m@1x.png" data-media="(max-width: 480px)"></div>
+									<div data-src="/assets/img/joshuapekera-m@2x.png" data-media="(max-width: 480px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+									<div data-src="/assets/img/joshuapekera-t@1x.png" data-media="(max-width: 767px)"></div>
+									<div data-src="/assets/img/joshuapekera-d@1x.png" data-media="(max-width: 767px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+									<div data-src="/assets/img/joshuapekera-d@1x.png" data-media="(min-width: 768px)"></div>
+									<noscript><img src="/assets/img/joshuapekera-d@1x.png" alt="Joshua Pekera Cover"></noscript>
+								</div>
 							</div>
 						</div>
 						<div class="span5 hidden-phone">
 							<div class="greeting animated bounceInRight" id="bonjour">
 								<h2>Bonjour!</h2>
-								<p>I am a marketer, strategist and designer with fleeting moments of profound creativity. A crafter of pixels and copy.  cult member since 2001.</p>
+								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy.  </p>
+								<p> cult member since 2001.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			
-			<div class="paper-banner animated fadeIn" id="contactbannertwo">
+			<section id="intro">
+			<div class="hero-banner animated fadeIn" id="contactbannertwo">
 					<div class="row-fluid">
 						<div class="span12">
 							<div class="greeting visible-phone">
-								<h2>Bonjour!</h2>
-								<p>I am a marketer, strategist and designer with fleeting moments of profound creativity. A crafter of pixels and copy.  cult member since 2001.</p>
+								<h2>bonjour!</h2>
+								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy. </p>
+								<p class="mute"> cult member since 2001.</p>
 							</div>
 							<p class="contactlead hidden-phone">Call, Email, Skype, Connect or Follow. All forms of digital stalking accepted. </p>
 						</div>
@@ -153,8 +162,8 @@
 							</div>
 						</div>
 					</div>
-				
-				</div><!-- end paper -->
+				</div>
+			</section>
 			
 			<section id="buckets">
 				<div class="container">
