--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					</nav>
 				</div>
 			</header>
-			<section id="content">
+			<section class="animated fadeIn" id="content">
 				<div class="container">
 					<div class="row-fluid">
 						<div class="span7">
@@ -129,8 +129,8 @@
 						<div class="span5 hidden-phone">
 							<div class="greeting animated bounceInRight" id="bonjour">
 								<h2>Bonjour!</h2>
-								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy.  </p>
-								<p> cult member since 2001.</p>
+								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy.  cult member since 2001.</p>
+								<a href="/portfolio" class="btn btn-primary btn-large">View My Portfolio</a>
 							</div>
 						</div>
 					</div>
@@ -167,6 +167,18 @@
 			
 			<section id="buckets">
 				<div class="container">
+					<div class="media">
+						<a class="pull-left" href="#"><img class="media-object" src="http://placehold.it/64x64"></a>
+						<div class="media-body">
+							<h4 class="media-heading">Media heading</h4>
+						</div>
+					</div>
+				</div>
+			</section>
+			
+			<!--
+<section id="buckets">
+				<div class="container">
 					<ul class="thumbnails">
 						<li class="span6">
 							<a href="/resume" class="bucket">
@@ -183,6 +195,7 @@
 					</ul>
 				</div>
 			</section>
+-->
 			<section id="pong">
 				<div class="container">
 					<div class="row-fluid">
@@ -191,7 +204,7 @@
 							<p>I created this site to apply to Baldwin&amp;. It is a responsive site with retina graphics and some nifty keyframe animations. However, it is just a resume. What should you do if you get bored while reading it?</p>
 						</div>
 						<div class="span3">
-							<a href="/pong" class="btn btn-cta btn-block-fluid">Play Pong!</a>
+							<a href="/pong" class="btn btn-primary">Play Pong!</a>
 						</div>
 					</div>
 				</div>
