--- a/index.html
+++ b/index.html
@@ -167,44 +167,64 @@
 			
 			<section id="buckets">
 				<div class="container">
-					<div class="media">
-						<a class="pull-left" href="#"><img class="media-object" src="http://placehold.it/64x64"></a>
-						<div class="media-body">
-							<h4 class="media-heading">Media heading</h4>
-						</div>
-					</div>
-				</div>
-			</section>
-			
-			<!--
-<section id="buckets">
-				<div class="container">
 					<ul class="thumbnails">
 						<li class="span6">
-							<a href="/resume" class="bucket">
-								<h3 id="bucket-resume">Resume</h3>
-								<p>What can I bring to the team?</p>
-							</a>
+							<div data-picture data-class="thumbnail" data-alt="Glasses">
+								<div data-src="/assets/img/glasses-d@1x.jpg" data-media="(max-width: 480px)"></div>
+								<div data-src="/assets/img/glasses-d@2x.jpg" data-media="(max-width: 480px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+								<div data-src="/assets/img/glasses-d@1x.jpg" data-media="(max-width: 767px)"></div>
+								<div data-src="/assets/img/glasses-d@2x.jpg" data-media="(max-width: 767px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+								<div data-src="/assets/img/glasses-d@1x.jpg" data-media="(min-width: 768px)"></div>
+								<div data-src="/assets/img/glasses-d@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+								<noscript><img src="/assets/img/glasses-d@2x.jpg" alt="Glasses"></noscript>
+							</div>
+							<h3>Resume "Attached"</h3>
+							<p>It makes all paper resumes envious</p>
+							<p>I attached a copy of my resume for you to read over. Its has all the basic stuff. I left off the section that details all my super powers though.</p>
+							<a href="/resume" class="btn btn-primary btn-small">Read it over</a>
 						</li>
 						<li class="span6">
-							<a href="/portfolio" class="bucket">
-								<h3 id="bucket-portfolio">Portfolio</h3>
-								<p>View some samples of my work</p>
-							</a>
+							<div data-picture data-class="thumbnail" data-alt="Folio">
+								<div data-src="/assets/img/folio-d@1x.jpg" data-media="(max-width: 480px)"></div>
+								<div data-src="/assets/img/folio-d@2x.jpg" data-media="(max-width: 480px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+								<div data-src="/assets/img/folio-d@1x.jpg" data-media="(max-width: 767px)"></div>
+								<div data-src="/assets/img/folio-d@2x.jpg" data-media="(max-width: 767px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+								<div data-src="/assets/img/folio-d@1x.jpg" data-media="(min-width: 768px)"></div>
+								<div data-src="/assets/img/folio-d@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+								<noscript><img src="/assets/img/glasses-d@2x.jpg" alt="Folio"></noscript>
+							</div>
+							<h3>Creative Folio</h3>
+							<p>A sexy collection of pixels &amp; copy</p>
+							<p>I have included some samples of my past work. It has a mix of traditional and digital samples. Break it to me nicely if you think I should try another profession.</p>
+							<a href="/portfolio" class="btn btn-primary btn-small">Give it a look</a>
 						</li>
 					</ul>
 				</div>
 			</section>
--->
+			
 			<section id="pong">
 				<div class="container">
 					<div class="row-fluid">
-						<div class="span9">
-							<h3>Some Fun &amp; Games</h3>
-							<p>I created this site to apply to Baldwin&amp;. It is a responsive site with retina graphics and some nifty keyframe animations. However, it is just a resume. What should you do if you get bored while reading it?</p>
+						<div class="span4">
+							<div class="media pull-left">
+								<!-- <a class="pull-left" href="#"> -->
+								<div data-picture data-class="media-object" data-alt="Atari Console">
+									<div data-src="/assets/img/atari@1x.png" data-media="(max-width: 480px)"></div>
+									<div data-src="/assets/img/atari@2x.png" data-media="(max-width: 480px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+									<div data-src="/assets/img/atari@2x.png" data-media="(max-width: 767px)"></div>
+									<div data-src="/assets/img/atari@2x.png" data-media="(max-width: 767px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+									<div data-src="/assets/img/atari@1x.png" data-media="(min-width: 768px)"></div>
+									<div data-src="/assets/img/atari@2x.png" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
+									<noscript><img class="media-object" src="/assets/img/atari@2x.png" alt="Atari Console"></noscript>
+								</div><!-- </a> -->
+							</div>
 						</div>
-						<div class="span3">
-							<a href="/pong" class="btn btn-primary">Play Pong!</a>
+						<div class="span8">
+							<div class="media-body">
+								<h3 class="media-heading">Some Fun &amp; Games</h3>
+								<p>I created this site as unique way to apply to agencies. It is a responsive site with retina graphics and some nifty keyframe animations. However, it is just a resume. What should you do if you get bored while reading it?</p>
+								<a href="/pong" class="btn btn-primary">Play Pong!</a>
+							</div>
 						</div>
 					</div>
 				</div>
