--- a/contact/index.html
+++ b/contact/index.html
@@ -41,6 +41,16 @@
 	<link href="/assets/css/fluid.css" rel="stylesheet">
 	<link href="/assets/css/style.css" rel="stylesheet">
 	
+	<style>
+	#page, .wrapper, .push, footer {
+		background: black url(/assets/img/bg-texture@1x.jpg) repeat;
+	}
+	
+	header {
+		background-color: white;
+	}
+	</style>
+	
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -73,7 +83,7 @@
 		<div class="scrollable">
 			<ul>
 				<li><a href="/"><img src="/assets/img/icon-home@2x.png" class="so-home" alt="icon">Home</a></li>
-				<li><a href="/coverletter" class="" id="tab-home"><img src="/assets/img/icon-coverletter@2x.png" class="so-home" alt="icon">Cover Letter</a></li>
+				<!-- <li><a href="/coverletter" class="" id="tab-home"><img src="/assets/img/icon-coverletter@2x.png" class="so-home" alt="icon">Cover Letter</a></li> -->
 				<li><a href="/resume" class="" id="tab-resume"><img src="/assets/img/icon-resume@2x.png" class="so-home" alt="icon">Resume</a></li>
 				<li><a href="/portfolio" class="" id="tab-portfolio"><img src="/assets/img/icon-portfolio@2x.png" class="so-home" alt="icon">Portfolio</a></li>
 				<!-- <li><a href="/process" class="" id="tab-process"><img src="/assets/img/icon-process@2x.png" class="so-home" alt="icon">Process</a></li> -->
@@ -98,20 +108,20 @@
 			<header class="" id="overview">
 				<div class="container">
 					<a class="plus visible-phone"></a>
-					<a class="brand" id="logo" href="#"></a>
-					<p>I want to join your team</p>
+					<a class="brand" id="logo" href="/">Joshua Pekera</a>
 					<nav>
-						<a href="/" class="navtext active">Home</a>
-						<a href="/coverletter" class="navtext">Cover Letter</a>
-						<a href="/resume" class="navtext">Resume</a>
-						<a href="/portfolio" class="navtext">Portfolio</a>
-						<!-- <a href="/process" class="navtext">Process</a> -->
-						<a href="/contact" class="navtext">Contact</a>
+						<ul>
+							<li><a href="/" class="navtext active">Home</a></li>
+							<li><a href="/resume" class="navtext">Resume</a></li>
+							<li><a href="/portfolio" class="navtext">Portfolio</a></li>
+							<li><a href="/contact" class="navtext">Contact</a></li>
+						</ul>
 					</nav>
 				</div>
 			</header>
 			<div class="container">
-				<hr>
+				<!--
+<hr>
 				<div class="crumb">
 					<div class="row-fluid">
 						<div class="span12">
@@ -119,7 +129,8 @@
 						</div>
 					</div>
 				</div>
-				<hr>	
+				<hr>
+-->	
 			
 				<div class="canvas fullcanvas animated fadeIn" id="cover">
 					<div class="row-fluid">
