--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<div class="span5 hidden-phone">
 							<div class="greeting animated bounceInRight" id="bonjour">
 								<h2>Bonjour!</h2>
-								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy.  cult member since 2001.</p>
+								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy.</p>
 								<a href="/portfolio" class="btn btn-primary btn-large">View My Portfolio</a>
 							</div>
 						</div>
@@ -143,7 +143,6 @@
 							<div class="greeting visible-phone">
 								<h2>bonjour!</h2>
 								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy. </p>
-								<p class="mute"> cult member since 2001.</p>
 							</div>
 							<p class="contactlead hidden-phone">Call, Email, Skype, Connect or Follow. All forms of digital stalking accepted. </p>
 						</div>
@@ -178,9 +177,9 @@
 								<div data-src="/assets/img/glasses-d@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
 								<noscript><img src="/assets/img/glasses-d@2x.jpg" alt="Glasses"></noscript>
 							</div>
-							<h3>Resume "Attached"</h3>
-							<p>It makes all paper resumes envious</p>
-							<p>I attached a copy of my resume for you to read over. Its has all the basic stuff. I left off the section that details all my super powers though.</p>
+							<h3>Résumé "Attached"</h3>
+							<p>It makes all paper résumés envious</p>
+							<p>I attached a copy of my résumé for you to read over. It has all the basic stuff. I left off the section that details all my super powers though.</p>
 							<a href="/resume" class="btn btn-primary btn-small">Read it over</a>
 						</li>
 						<li class="span6">
@@ -195,7 +194,7 @@
 							</div>
 							<h3>Creative Folio</h3>
 							<p>A sexy collection of pixels &amp; copy</p>
-							<p>I have included some samples of my past work. It has a mix of traditional and digital samples. Break it to me nicely if you think I should try another profession.</p>
+							<p>I have included some samples of my past work. It has a mix of traditional and digital samples. Break it to me nicely if you think I should pursue another profession.</p>
 							<a href="/portfolio" class="btn btn-primary btn-small">Give it a look</a>
 						</li>
 					</ul>
