--- a/resume/index.html
+++ b/resume/index.html
@@ -43,11 +43,7 @@
 	
 	<style>
 	#page, .wrapper, .push, footer {
-		background: black url(/assets/img/bg-texture@1x.jpg) repeat;
-	}
-	
-	header {
-		background-color: white;
+		background: #e6e6e6 url("/assets/img/bg-woodsl@1x.png") repeat;
 	}
 	</style>
 	
@@ -120,7 +116,8 @@
 			</header>
 			
 			<div class="container">
-				<hr>
+				<!--
+<hr>
 				<div class="crumb">
 					<div class="row-fluid">
 						<div class="span12">
@@ -128,7 +125,8 @@
 						</div>
 					</div>
 				</div>
-				<hr>	
+				<hr>
+-->	
 										
 				<div class="paper animated fadeIn" id="primarycontent"> <!-- start paper -->
 					<section id="letterhead">
