--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								<div data-src="/assets/img/glasses-d@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0),(min-device-pixel-ratio: 2.0)"></div>
 								<noscript><img src="/assets/img/glasses-d@2x.jpg" alt="Glasses"></noscript>
 							</div>
-							<h3>Résumé "Attached"</h3>
+							<h3>Résumé &ldquo;Attached&rdquo;</h3>
 							<p>It makes all paper résumés envious</p>
 							<p>I attached a copy of my résumé for you to read over. It has all the basic stuff. I left off the section that details all my super powers though.</p>
 							<a href="/resume" class="btn btn-primary btn-small">Read it over</a>
