--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,6 +40,7 @@
 	<link href="/assets/css/main.css" rel="stylesheet">
 	<link href="/assets/css/fluid.css" rel="stylesheet">
 	<link href="/assets/css/style.css" rel="stylesheet">
+	<link href="/assets/css/basic-layout.css" rel="stylesheet">
 	
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -113,7 +114,8 @@
 			</header>
 			
 			<div class="container">	
-				<hr>
+				<!--
+<hr>
 				<div class="crumb">
 					<div class="row-fluid">
 						<div class="span12">
@@ -122,6 +124,7 @@
 					</div>
 				</div>
 				<hr>
+-->
 			
 				<div class="canvas fullcanvas animated fadeIn" id="foliocanvasone">
 					<div class="row-fluid">
