--- a/resume/index.html
+++ b/resume/index.html
@@ -40,12 +40,7 @@
 	<link href="/assets/css/main.css" rel="stylesheet">
 	<link href="/assets/css/fluid.css" rel="stylesheet">
 	<link href="/assets/css/style.css" rel="stylesheet">
-	
-	<style>
-	#page, .wrapper, .push, footer {
-		background: #e6e6e6 url("/assets/img/bg-woodsl@1x.png") repeat;
-	}
-	</style>
+	<link href="/assets/css/basic-layout.css" rel="stylesheet">
 	
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -115,7 +110,8 @@
 				</div>
 			</header>
 			
-			<div class="container">
+			
+			<div class="container" id="primary-container">
 				<!--
 <hr>
 				<div class="crumb">
