--- a/contact/index.html
+++ b/contact/index.html
@@ -40,16 +40,7 @@
 	<link href="/assets/css/main.css" rel="stylesheet">
 	<link href="/assets/css/fluid.css" rel="stylesheet">
 	<link href="/assets/css/style.css" rel="stylesheet">
-	
-	<style>
-	#page, .wrapper, .push, footer {
-		background: black url(/assets/img/bg-texture@1x.jpg) repeat;
-	}
-	
-	header {
-		background-color: white;
-	}
-	</style>
+	<link href="/assets/css/basic-layout.css" rel="stylesheet">
 	
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -62,7 +53,8 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/touch-72.png">
 	<link rel="apple-touch-icon-precomposed" href="/assets/ico/touch-58.png">
 	
-	<script type="text/javascript">
+	<!--
+<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-30476296-3']);
 	  _gaq.push(['_trackPageview']);
@@ -74,6 +66,7 @@
 	  })();
 	
 	</script>
+-->
 </head>
 	
 <body>
@@ -132,7 +125,7 @@
 				<hr>
 -->	
 			
-				<div class="canvas fullcanvas animated fadeIn" id="cover">
+				<div class="canvas fullcanvas animated fadeIn" id="contact-cover">
 					<div class="row-fluid">
 						<div class="span12">
 							<div class="contactcover">
