--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 	
 	<script type="text/javascript" src="/assets/js/lib/scripts/matchmedia.js"></script>
 	<script type="text/javascript" src="/assets/js/lib/scripts/picturefill.js"></script>
-	<script type="text/javascript">
+	<!--
+<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-30476296-3']);
 	  _gaq.push(['_trackPageview']);
@@ -66,6 +67,7 @@
 	  })();
 	
 	</script>
+-->
 </head>
 	
 <body>
@@ -222,7 +224,7 @@
 							<div class="media-body">
 								<h3 class="media-heading">Some Fun &amp; Games</h3>
 								<p>I created this site as unique way to apply to agencies. It is a responsive site with retina graphics and some nifty keyframe animations. However, it is just a resume. What should you do if you get bored while reading it?</p>
-								<a href="/pong" class="btn btn-primary">Play Pong!</a>
+								<a href="/pong" class="btn btn-primary btn-small">Play Pong!</a>
 							</div>
 						</div>
 					</div>
