--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,7 +55,8 @@
 	
 	<script type="text/javascript" src="/assets/js/lib/scripts/matchmedia.js"></script>
 	<script type="text/javascript" src="/assets/js/lib/scripts/picturefill.js"></script>
-	<script type="text/javascript">
+	<!--
+<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-30476296-3']);
 	  _gaq.push(['_trackPageview']);
@@ -67,6 +68,7 @@
 	  })();
 	
 	</script>
+-->
 </head>
 	
 <body>
@@ -464,7 +466,7 @@
 								</div>
 							</div>
 							<div class="span6">
-								<a class="" href="/contact" title="">Get in touch with me</a>
+								<a class="cta" href="/contact" title="">Get in touch with me</a>
 							</div>
 						</div>
 					</div>
