--- a/resume/index.html
+++ b/resume/index.html
@@ -52,7 +52,8 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/touch-144.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/touch-72.png">
 	<link rel="apple-touch-icon-precomposed" href="/assets/ico/touch-58.png">
-	<script type="text/javascript">
+	<!--
+<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-30476296-3']);
 	  _gaq.push(['_trackPageview']);
@@ -64,6 +65,7 @@
 	  })();
 	
 	</script>
+-->
 </head>
 	
 <body>
@@ -328,7 +330,7 @@
 								<h3 id="folio">Portfolio</h3>
 							</div>
 							<div class="span6">
-								<a class="" href="/portfolio" title="">View some samples of my work</a>
+								<a class="cta" href="/portfolio" title="">View some samples of my work</a>
 							</div>
 						</div>
 					</div>
