--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,10 +78,9 @@
 		<div class="scrollable">
 			<ul>
 				<li><a href="/"><img src="/assets/img/icon-home@2x.png" class="so-home" alt="icon">Home</a></li>
-				<!-- <li><a href="/coverletter" class="" id="tab-home"><img src="/assets/img/icon-coverletter@2x.png" class="so-home" alt="icon">Cover Letter</a></li> -->
+				<li><a href="/coverletter" class="" id="tab-home"><img src="/assets/img/icon-coverletter@2x.png" class="so-home" alt="icon">Cover Letter</a></li>
 				<li><a href="/resume" class="" id="tab-resume"><img src="/assets/img/icon-resume@2x.png" class="so-home" alt="icon">Resume</a></li>
 				<li><a href="/portfolio" class="" id="tab-portfolio"><img src="/assets/img/icon-portfolio@2x.png" class="so-home" alt="icon">Portfolio</a></li>
-				<!-- <li><a href="/process" class="" id="tab-process"><img src="/assets/img/icon-process@2x.png" class="so-home" alt="icon">Process</a></li> -->
 				<li><a href="/contact" class="" id="tab-contact"><img src="/assets/img/icon-contact@2x.png" class="so-home" alt="icon">Contact</a></li>
 			</ul>
 			<div class="separator">Follow Me</div>
@@ -107,6 +106,7 @@
 					<nav>
 						<ul>
 							<li><a href="/" class="navtext active">Home</a></li>
+							<li><a href="/coverletter" class="navtext">Cover Letter</a></li>
 							<li><a href="/resume" class="navtext">Resume</a></li>
 							<li><a href="/portfolio" class="navtext">Portfolio</a></li>
 							<li><a href="/contact" class="navtext">Contact</a></li>
@@ -116,18 +116,14 @@
 			</header>
 			
 			<div class="container">	
-				<!--
-<hr>
 				<div class="crumb">
 					<div class="row-fluid">
-						<div class="span12">
-							<h1>Portfolio</h1><small>A few samples of my creative and development work.</small>
+						<div class="span12 animated fadeInDown" id="page-title">
+							<h1>Portfolio</h1>
 						</div>
 					</div>
 				</div>
-				<hr>
--->
-			
+							
 				<div class="canvas fullcanvas animated fadeIn" id="foliocanvasone">
 					<div class="row-fluid">
 						<div class="span12">
