--- a/resume/index.html
+++ b/resume/index.html
@@ -112,8 +112,7 @@
 				</div>
 			</header>
 			
-			
-			<div class="container" id="primary-container">
+			<div class="container">
 				<div class="crumb">
 					<div class="row-fluid">
 						<div class="span12 animated fadeInDown" id="page-title">
