--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 						<div class="span5 hidden-phone">
 							<div class="greeting animated bounceInRight" id="bonjour">
 								<h2>Bonjour!</h2>
-								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy.</p>
-								<a href="/portfolio" class="btn btn-primary btn-large">View My Portfolio</a>
+								<p>I am a marketer, strategist, product designer and code monkey. No Jedi powers...yet. Will work for Apple Hardware. You can learn more about me in my cover letter.</p>
+								<a href="/coverletter" class="btn btn-primary btn-large">Cover Letter</a>
 							</div>
 						</div>
 					</div>
@@ -143,8 +143,8 @@
 					<div class="row-fluid">
 						<div class="span12">
 							<div class="greeting visible-phone">
-								<h2>bonjour!</h2>
-								<p>I am a marketer, strategist and product designer with fleeting moments of profound creativity. A crafter of pixels and copy. </p>
+								<h2>Bonjour!</h2>
+								<p>I am a marketer, strategist, product designer and code monkey. No Jedi powers...yet. Will work for Apple Hardware. You can learn more about me in my cover letter.</p>
 							</div>
 							<p class="contactlead hidden-phone">Call, Email, Skype, Connect or Follow. All forms of digital stalking accepted. </p>
 						</div>
