--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 	
 	<!-- Le fav and touch icons -->
 	<link rel="shortcut icon" href="/assets/ico/fav.ico">
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/touch-144-1.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/touch-72-1.png">
-	<link rel="apple-touch-icon-precomposed" href="/assets/ico/touch-58-1.png">
+	<link rel="apple-touch-icon-precomposed" href="/assets/ico/touch-57.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/touch-72.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/touch-114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/touch-144.png">
+	
 	
 	<script type="text/javascript" src="/assets/js/lib/scripts/matchmedia.js"></script>
 	<script type="text/javascript" src="/assets/js/lib/scripts/picturefill.js"></script>
