--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -499,4 +499,18 @@
 ================================================== -->
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
 </body>
+<!-- Gauges -->
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '50988e3e613f5d409f000004');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
 </html>
