--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,8 +17,8 @@
   	<meta name="keywords" content="ux design, developer, digital prodcuer">
   	<!-- Mobile viewport optimized -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  	<meta name="description" content="I want to work at Baldwin&">
-	<meta name="keywords" content="baldwin, résumé, responsive, fluid">
+  	<meta name="description" content="Joshua Pekera's digital resume">
+	<meta name="keywords" content="résumé, responsive, fluid">
 	<meta name="robots" content="index,follow">
 	<meta name="author" content="Joshua Pekera">	
 	<!-- Set a base location for /assets -->
