--- a/coverletter/index.html
+++ b/coverletter/index.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
   	<!-- You can use .htaccess and remove these lines to avoid edge case issues. -->
   	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  	<title>Cover Letter | what I can bring to Baldwin& | Joshua Pekera</title>
+  	<title>Cover Letter | what I can bring to a team | Joshua Pekera</title>
   	<meta name="author" content="Joshua Pekera">
   	<meta name="description" content="UX designer and front end developer">
   	<meta name="keywords" content="ux design, developer, digital prodcuer">
@@ -53,19 +53,6 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/touch-72.png">
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/touch-114.png">
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/touch-144.png">
-	
-	<script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-30476296-3']);
-	  _gaq.push(['_trackPageview']);
-	
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	
-	</script>
 </head>
 	
 <body>
@@ -252,5 +239,17 @@
     s.parentNode.insertBefore(t, s);
   })();
 </script>
+<!-- Google Analytics -->
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-30476296-4']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 </body>
 </html>
