--- a/pong/index.html
+++ b/pong/index.html
@@ -53,19 +53,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/touch-72.png">
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/touch-114.png">
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/touch-144.png">
-	
-	<script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-30476296-3']);
-	  _gaq.push(['_trackPageview']);
-	
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	
-	</script>
+</head>
 <body>
 	<div id="viewport">
 	
@@ -243,6 +231,18 @@ Game.addEvent(predictions, 'change', function() { pong.showPredictions(predictio
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
+</script>
+<!-- Google Analytics -->
+<script type="text/javascript">
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-30476296-4']);
+	_gaq.push(['_trackPageview']);
+
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
 </script>
 </body> 
 </html>
