--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						<div class="span8">
 							<div class="media-body">
 								<h3 class="media-heading">Some Fun &amp; Games</h3>
-								<p>I created this site as unique way to apply to agencies. It is a responsive site with retina graphics and some nifty keyframe animations. However, it is just a resume. What should you do if you get bored while reading it?</p>
+								<p>I created this site as an unique way to apply to agencies. It is a responsive site with retina graphics and some nifty keyframe animations. However, it is just a resume. What should you do if you get bored while reading it?</p>
 								<a href="/pong" class="btn btn-primary btn-small">Play Pong!</a>
 							</div>
 						</div>
