--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
   	<meta name="description" content="Joshua Pekera's digital resume">
 	<meta name="keywords" content="résumé, responsive, fluid">
 	<meta name="robots" content="index,follow">
-	<meta name="author" content="Joshua Pekera">	
+	<meta name="author" content="Joshua Pekera">
+	<!-- Facebook -->
+	<meta property="fb:app_id" content="512384002113409"> <!-- put your fb app ID number here -->
+	<meta property="og:type"   content="website" />
+	<meta property="og:url" content="http://cv.joshuapekera.com/"> <!-- put your shared domian here -->
+	<meta property="og:image" content="http://cv.joshuapekera.com/assets/ico/fb-thumb.jpg"> <!-- put your shared image here -->
+	<meta property="og:title" content="You should hire me."> <!-- put your share's title here -->
+	<meta property="og:description" content="I am marketer, strategist, product designer and code monkey. Are you looking for someone like that to join your team? Take a look at my CV.">
 	<!-- Set a base location for assets -->
 	<!-- <base href="http://cv.joshuapekera.com/"/> -->
 	<!-- End base -->
