--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,7 @@
 	<meta property="og:url" content="http://cv.joshuapekera.com/"> <!-- put your shared domian here -->
 	<meta property="og:image" content="http://cv.joshuapekera.com/assets/ico/fb-thumb.jpg"> <!-- put your shared image here -->
 	<meta property="og:title" content="You should hire me."> <!-- put your share's title here -->
-	<meta property="og:description" content="I am marketer, strategist, product designer and code monkey. Are you looking for someone like that to join your team? Take a look at my CV.">
+	<meta property="og:description" content="I am a marketer, strategist, product designer and code monkey. Are you looking for someone like that to join your team? Take a look at my CV.">
 	<!-- Set a base location for assets -->
 	<!-- <base href="http://joshuapekera.com/"/> -->
 	<!-- End base -->
