--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -71,20 +71,20 @@
 	<aside id="menu" class="">
 		<div class="scrollable">
 			<ul>
-				<li><a href="/"><img src="/assets/img/icon-home@2x.png" class="so-home" alt="icon">Home</a></li>
-				<li><a href="/coverletter" class="" id="tab-home"><img src="/assets/img/icon-coverletter@2x.png" class="so-home" alt="icon">Cover Letter</a></li>
-				<li><a href="/resume" class="" id="tab-resume"><img src="/assets/img/icon-resume@2x.png" class="so-home" alt="icon">Resume</a></li>
-				<li><a href="/portfolio" class="" id="tab-portfolio"><img src="/assets/img/icon-portfolio@2x.png" class="so-home" alt="icon">Portfolio</a></li>
-				<li><a href="/contact" class="" id="tab-contact"><img src="/assets/img/icon-contact@2x.png" class="so-home" alt="icon">Contact</a></li>
+				<li ontouchstart=""><a href="/"><img src="/assets/img/icon-home@2x.png" class="so-home" ontouchstart="" alt="icon">Home</a></li>
+				<li ontouchstart=""><a href="/coverletter" class="" id="tab-home"><img src="/assets/img/icon-coverletter@2x.png" class="so-home" ontouchstart="" alt="icon">Cover Letter</a></li>
+				<li ontouchstart=""><a href="/resume" class="" id="tab-resume"><img src="/assets/img/icon-resume@2x.png" class="so-home" ontouchstart="" alt="icon">Resume</a></li>
+				<li ontouchstart=""><a href="/portfolio" class="" id="tab-portfolio"><img src="/assets/img/icon-portfolio@2x.png" class="so-home" ontouchstart="" alt="icon">Portfolio</a></li>
+				<li ontouchstart=""><a href="/contact" class="" id="tab-contact"><img src="/assets/img/icon-contact@2x.png" class="so-home" ontouchstart="" alt="icon">Contact</a></li>
 			</ul>
 			<div class="separator">Follow Me</div>
 			<ul>
-				<li><a href="http://twitter.com/joshuapekera" class="" id="tab-twitter" target="blank"><img src="/assets/img/icon-twitter@2x.png" class="so-twitter" alt="icon-twitter">Twitter</a></li>
-				<li><a href="http://fb.me/joshuapekera" class="" id="tab-facebook" target="blank"><img src="/assets/img/icon-fb@2x.png" class="so-facebook" alt="icon-facebook">Facebook</a></li>
-				<li><a href="http://www.linkedin.com/in/joshuaspekera" class="" id="tab-linkedin" target="blank"><img src="/assets/img/icon-linkedin@2x.png" class="so-linkedin" alt="icon-linkedin">LinkedIn</a></li>
-				<li><a href="http://dribbble.com/joshuapekera" class="" id="tab-dribbble" target="blank"><img src="/assets/img/icon-dribbble@2x.png" class="so-dribbble" alt="icon-dribbble">Dribbble</a></li>
-				<li><a href="http://forrst.me/joshuapekera" class="" id="tab-forrst" target="blank"><img src="/assets/img/icon-forrst@2x.png" class="so-forrst" alt="icon-forrst">Forrst</a></li>
-				<li><a href="skype:joshuapekera?chat" class="" id="tab-skype"><img src="/assets/img/icon-skype@2x.png" class="so-skype" alt="icon-skype">Skype</a></li>
+				<li ontouchstart=""><a href="http://twitter.com/joshuapekera" class="" id="tab-twitter" target="blank"><img src="/assets/img/icon-twitter@2x.png" class="so-twitter" ontouchstart="" alt="icon-twitter">Twitter</a></li>
+				<li ontouchstart=""><a href="http://fb.me/joshuapekera" class="" id="tab-facebook" target="blank"><img src="/assets/img/icon-fb@2x.png" class="so-facebook" ontouchstart="" alt="icon-facebook">Facebook</a></li>
+				<li ontouchstart=""><a href="http://www.linkedin.com/in/joshuaspekera" class="" id="tab-linkedin" target="blank"><img src="/assets/img/icon-linkedin@2x.png" class="so-linkedin" ontouchstart="" alt="icon-linkedin">LinkedIn</a></li>
+				<li ontouchstart=""><a href="http://dribbble.com/joshuapekera" class="" id="tab-dribbble" target="blank"><img src="/assets/img/icon-dribbble@2x.png" class="so-dribbble" ontouchstart="" alt="icon-dribbble">Dribbble</a></li>
+				<li ontouchstart=""><a href="http://forrst.me/joshuapekera" class="" id="tab-forrst" target="blank"><img src="/assets/img/icon-forrst@2x.png" class="so-forrst" ontouchstart="" alt="icon-forrst">Forrst</a></li>
+				<li ontouchstart=""><a href="skype:joshuapekera?chat" class="" id="tab-skype"><img src="/assets/img/icon-skype@2x.png" class="so-skype" ontouchstart="" alt="icon-skype">Skype</a></li>
 			</ul>
 			<div class="separator">© 2012 Joshua Pekera</div>
 		</div>
