--- a/contact/index.html
+++ b/contact/index.html
@@ -119,7 +119,7 @@
 					<div class="row-fluid">
 						<div class="span12">
 							<div class="contactcover">
-								<img src="/assets/img/joshuapekera.jpg" alt="Joshua Pekera Cover"/>
+								<img src="/assets/img/contact-joshuapekera@1x.jpg" alt="Joshua Pekera Cover"/>
 							</div>
 						</div>
 					</div>
