--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<div class="row-fluid">
 						<div class="span12">
 							<div class="greeting visible-phone">
-								<h2>Bonjour!</h2>
+								<h2>Hello!</h2>
 								<p>I am a marketer, strategist, product designer and code monkey. No Jedi powers...yet. Will work for Apple Hardware. You can learn more about me in my <a href="/coverletter">Cover Letter</a>.</p>
 							</div>
 							<p class="contactlead hidden-phone">Call, Email, Skype, Connect or Follow. All forms of digital stalking accepted. </p>
